--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,8 @@ main{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
     margin-top: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
 }
 
@@ -62,10 +64,17 @@ footer{
     main{
         display: block;
     }
+
+    .grid-1,.grid-2,.grid-3{
+        margin-bottom: 2rem;
+    }
 }
 
 @media only screen and (max-width : 320px){
     main{
         display: block;
+    }
+    .grid-1,.grid-2,.grid-3{
+        margin-bottom: 2rem;
     }
 }
