--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ main{
 }
 
 .text-box h3{
-    background-color: #FF8C00;
+    background-color: #FFD700;
     color: white; 
     padding: 10px;
     margin: 0;
